[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/GrainMillSlots.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=3]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Themes/UI_Title.tres" type="Theme" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/GrainMill/GrainMill.gd" type="Script" id=6]
[ext_resource path="res://Assets/Images/Misc/Buttons/exit button.png" type="Texture" id=7]
[ext_resource path="res://World/Player/Player/UserInterface/UiBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Images/User interface/Grain mill/grain mill.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/User interface/Grain mill/grain mill gear.png" type="Texture" id=10]
[ext_resource path="res://World/Player/Player/UserInterface/GrainMill/GrainMillCrank.gd" type="Script" id=11]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 93.0054

[node name="GrainMill" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="Bg" parent="." instance=ExtResource( 8 )]
mouse_filter = 2

[node name="Trash" parent="." instance=ExtResource( 1 )]
margin_left = -448.0
margin_top = -240.0
margin_right = -448.0
margin_bottom = -240.0

[node name="ItemDescription" parent="." instance=ExtResource( 4 )]
visible = false

[node name="GrainMillSlots" parent="." instance=ExtResource( 2 )]
margin_left = 151.0
margin_top = 22.0
margin_right = 151.0
margin_bottom = 22.0

[node name="InventorySlots" parent="." instance=ExtResource( 12 )]
margin_left = 103.0
margin_top = 463.0
margin_right = 940.0
margin_bottom = 631.0
custom_constants/vseparation = 9

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 3 )]
margin_left = 103.0
margin_top = 373.0
margin_right = 940.0
margin_bottom = 454.0

[node name="Title" type="Label" parent="."]
margin_left = 75.0
margin_top = -104.0
margin_right = 860.0
margin_bottom = 42.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "Grain mill #1:"
clip_text = true

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 994.0
margin_top = -140.0
margin_right = 1066.0
margin_bottom = -68.0
texture_normal = ExtResource( 7 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Decoration" type="Sprite" parent="."]
position = Vector2( 402, 161 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )

[node name="GrainMillCrank" type="Sprite" parent="."]
position = Vector2( 404, 119.5 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="GrainMillCrank"]
position = Vector2( -394, -196 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrainMillCrank/Area2D"]
position = Vector2( 393, 196 )
shape = SubResource( 1 )

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="input_event" from="GrainMillCrank/Area2D" to="GrainMillCrank" method="_on_Area2D_input_event"]
[connection signal="mouse_exited" from="GrainMillCrank/Area2D" to="GrainMillCrank" method="_on_Area2D_mouse_exited"]
